--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 	</section>
 
 	<!-- About Us -->
+
 	<section id="about">
 		<div class="container">
 			<img src="img/burger-about-us.png">
@@ -168,16 +169,16 @@
 			<div class="swiper-chefs">
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
-						<img src="img/store/pocitos.jpg">
+						<img src="img/store/pocitos.JPG">
 					</div>
 					<div class="swiper-slide">
-						<img src="img/store/pde.jpg">
+						<img src="img/store/pde.JPG">
 					</div>
 					<div class="swiper-slide">
-						<img src="img/store/carrasco.jpg">
+						<img src="img/store/carrasco.JPG">
 					</div>
 					<div class="swiper-slide">
-						<img src="img/store/lacosta.jpg">
+						<img src="img/store/lacosta.JPG">
 					</div>
 				</div>
 			</div>
